Updating config.yml

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 author: Travis Lawson
-title: The method to my variables
+title: The variables to my methods
 header-img: img/home-bg.png
 email: travislawclimb@gmail.com
 copyright_name: Travis Lawson
